--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
 		"start": "node index.js"
 	},
 	"author": "MugishaU",
-	"license": "MIT"
+	"license": "MIT",
+	"dependencies": {
+		"aws-sdk": "^2.1043.0"
+	}
 }
