remove aws-sdk & extract email send to own file

--- a/package.json
+++ b/package.json
@@ -8,8 +8,5 @@
 		"start": "node index.js"
 	},
 	"author": "MugishaU",
-	"license": "MIT",
-	"dependencies": {
-		"aws-sdk": "^2.1043.0"
-	}
+	"license": "MIT"
 }
