--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
 		"start": "node index.js"
 	},
 	"author": "MugishaU",
-	"license": "MIT"
+	"license": "MIT",
+	"dependencies": {
+		"dotenv": "^10.0.0",
+		"node-mailjet": "^3.3.4"
+	}
 }
